# cppSynth

./: .gitignore  CMakeLists.txt  README.md  osc.cpp
Oscillators/: CMakeLists.txt  osc.cpp  osc1.cpp  osc2.cpp  osc3.cpp
